syntax = "proto3";

option java_multiple_files =  true;

package org.sample.park;

message Vehicle {
  string vehicle_number = 1;
  string vehicle_type = 2;
}

message ParkRequest {
  Vehicle vehicle = 1;
}

message ParkResponse {
  string result = 1;
}

message ParkResponseManyTimes {
  string result = 1;
}

service CarParkService {

  // Unary
  rpc parkVehicle(ParkRequest) returns (ParkResponse);

  // Streaming server
  rpc parkVehicleManyTimes(ParkRequest) returns (stream ParkResponseManyTimes);

}